package conadapter;

public interface Notificador {

    void notificar(String mensaje);
}